static class TagHolder
{
    public const string ASSAULT = "Assault Rifle";
    public const string SHOTGUN = "Shotgun";
    public const string PISTOL = "Pistol";
    public const string BULLET_SPAWN_POINT = "BulletSpawnPoint";
    public const string MUZZLE_FLASH = "MuzzleFlashEffect";
    public const string HEALTH_BAR = "Health/HealthBar";
    public const string SCORE_COUNT = "Score/ScoreCount";
    public const string AMMO_COUNT = "Ammo/AmmoCount";
    public const string ACTIVE_GUN = "Gun/CurrentGun";
    public const string RELOAD_WARNING = "ReloadWarning";
    public const string IS_RUNNING = "isRunning";
    public const string IS_SHOOTING = "isShooting";
    public const string IS_DEAD = "isDead";
    public const string CROSSHAIR_ASSAULT = "Crosshairs/Assault";
    public const string CROSSHAIR_SHOTGUN = "Crosshairs/Shotgun";
    public const string CROSSHAIR_PISTOL = "Crosshairs/Pistol";
}
